correction of the position of the buttons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#" target="_blank" class="menu__link">Reviews</a>
                     </li>
                 </ul>
-                <a class="button button_end" href="#">Get started</a>
+                <a class="button button_end" href="#form" onclick="test()">Get started</a>
             </div>
             <div class="digtal">
                 <div class="digtal__title">
@@ -153,7 +153,7 @@
             <p class="subscription__title">Sign up to our Newsletter</p>
             <p class="subscription__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu sagittis, Atiam
                 lorem sed justo amet viverra in a.</p>
-            <form method="post" action="">
+            <form  id="form" method="post" action="">
                 <input class="email" type="email" placeholder="Enter your email address">
                 <input class="btn" type="submit" value="Send">
             </form>
@@ -213,15 +213,13 @@
                             <a href="#" class="fa fa-google"><img src="assets/img/Go.png" alt="gog"></a>
                         </div>
                     </div>
-
-
                 </div>
             </div>
-
 
         </div>
     </div>
 </footer>
+<script src="assets/js/script.js"></script>
 
 
 </body>
